--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 %% Key contributor: Thomas Arts <thomas.arts@quviq.com>
 %%
 %%=============================================================================
-
+{erl_first_files, ["src/locks_watcher.erl"]}.
 {edoc_opts, [{doclet, edown_doclet},
              {app_default, "http://www.erlang.org/doc/man"},
              {doc_path, []},
