locks_leader behaves better at netsplits

--- a/examples/rebar.config
+++ b/examples/rebar.config
@@ -11,11 +11,10 @@
 %% Key contributor: Thomas Arts <thomas.arts@quviq.com>
 %%
 %%=============================================================================
-{erl_first_files, ["src/locks_watcher.erl", "src/locks_leader.erl"]}.
-{sub_dirs, ["examples"]}.
+{erl_opts, [{pa,"../ebin"}]}.
 {edoc_opts, [{doclet, edown_doclet},
              {app_default, "http://www.erlang.org/doc/man"},
              {doc_path, []},
              {top_level_readme,
               {"./README.md",
-               "https://github.com/uwiger/locks"}}]}.
+               "https://github.com/uwiger/locks/examples"}}]}.
