plain_fsm dep set to 1.1

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
 {erl_first_files, ["src/locks_watcher.erl", "src/locks_leader.erl"]}.
 {sub_dirs, ["examples"]}.
 {deps, [{plain_fsm,".*",{git,"git://github.com/uwiger/plain_fsm.git",
-			 {branch, master}}}]}.
+			 {tag, "1.1"}}}]}.
 {edoc_opts, [{doclet, edown_doclet},
              {app_default, "http://www.erlang.org/doc/man"},
              {doc_path, []},
