compile locks with rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -11,13 +11,22 @@
 %% Key contributor: Thomas Arts <thomas.arts@quviq.com>
 %%
 %%=============================================================================
+
 {erl_first_files, ["src/locks_watcher.erl", "src/locks_leader.erl"]}.
-{sub_dirs, ["examples"]}.
-{deps, [{plain_fsm,".*",{git,"git://github.com/uwiger/plain_fsm.git",
-			 {branch, master}}}]}.
-{edoc_opts, [{doclet, edown_doclet},
-             {app_default, "http://www.erlang.org/doc/man"},
-             {doc_path, []},
-             {top_level_readme,
-              {"./README.md",
-               "https://github.com/uwiger/locks"}}]}.
+
+%% == Deps ==
+%%
+{deps, [{plain_fsm, "1.4.1"}]}.
+
+%% == Profiles ==
+%%
+{profiles, [{docs, [{deps, [{edown, "0.8.1"}]},
+                    {edoc_opts, [{doclet, edown_doclet},
+                                 {app_default, "http://www.erlang.org/doc/man"},
+                                 {doc_path, []},
+                                 {top_level_readme,
+                                  {"./README.md","https://github.com/uwiger/locks"}}]}]}
+
+           ]}.
+
+{ct_opts, [{dir, ["test", "examples/src"]}]}.
