General improvements - refactor support code in agent and server to separate lib mods   for cleaner tracing - locks_server sends only one notification per involved agent - locks_server keeps a global vsn counter to ensure strictly increasing   versions - locks_leader maintains an election vector based on lock info - signal leader_uncertain or ensure_sync more often, esp. if the   vector info indicates inconsistency. - moved example code to fit better with rebar3 - remove rebar2-specific compilation in locks_leader_SUITE

--- a/rebar.config
+++ b/rebar.config
@@ -25,8 +25,7 @@
                                  {app_default, "http://www.erlang.org/doc/man"},
                                  {doc_path, []},
                                  {top_level_readme,
-                                  {"./README.md","https://github.com/uwiger/locks"}}]}]}
-
+                                  {"./README.md","https://github.com/uwiger/locks"}}]}
+                   ]},
+            {test, [{project_app_dirs, [".", "examples/gdict"]}]}
            ]}.
-
-{ct_opts, [{dir, ["test", "examples/src"]}]}.
