Add random-netsplits tc, trace improvements

--- a/rebar.config
+++ b/rebar.config
@@ -27,5 +27,10 @@
                                  {top_level_readme,
                                   {"./README.md","https://github.com/uwiger/locks"}}]}
                    ]},
-            {test, [{project_app_dirs, [".", "examples/gdict"]}]}
+            {test, [ {project_app_dirs, [".", "examples/gdict"]}
+                   , {deps, [{leader, ".*",
+                              {git, "https://github.com/uwiger/locks-test.git",
+                               {branch, "uw-error-inspection"}}}
+                            ]}
+                   ]}
            ]}.
