WIP add seq-tagged async_await_all_locks

--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
 %%=============================================================================
 
 {erl_first_files, ["src/locks_watcher.erl", "src/locks_leader.erl"]}.
+{erl_opts, [debug_info]}.
 
 %% == Deps ==
 %%
